--- a/gallery.html
+++ b/gallery.html
@@ -82,11 +82,11 @@
         </ul>
         <center>
             <p>
-              <a href="index.html">
+              <a href="index.html" target="_blank">
                   <b>Başa Dön</b>
               </a>
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-             <a href="index.html">
+             <a href="index.html" target="_blank">
                  <b>Anasayfa</b>
               </a>
         </p>
