anasayfa footer target eklendi

--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
         </h2>
         <ul>
             <li>
-                <a href="https://tr.wikipedia.org/wiki/Komodo_ejderi" title="Wikipedia">
+                <a href="https://tr.wikipedia.org/wiki/Komodo_ejderi" title="Wikipedia" target="_blank">
                     <b>Wikipedia</b>             
                 </a><br>
             </li>
             <li>
-                <a href="https://unsplash.com/s/photos/komodo-dragon?orientation=landscape" title="Unsplash">
+                <a href="https://unsplash.com/s/photos/komodo-dragon?orientation=landscape" title="Unsplash" target="_blank">
                     <b>Unsplash</b>
                 </a><br>
             </li>
             <li>
-                <a href="https://www.freepik.com/search?format=search&query=komodo%20dragon">
+                <a href="https://www.freepik.com/search?format=search&query=komodo%20dragon" target="_blank">
                     <b>Freepik</b>
                 </a>
             </li>
