index text edit

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
                     &nbspKomodo ejderinin yaklaşık 4 milyon yıl önce Avustralyalı atalarından farklılaştığı düşünülmektedir. Bununla birlikte, Queensland'den gelen son fosil kanıtları, Komodo ejderinin Endonezya'ya yayılmadan önce Avustralya'da evrimleştiğini gösterir.
                 </p>
                 <p>
-                    &nbspSon buzul döneminde deniz seviyesinin dramatik bir şekilde düşmesi, Komodo ejderinin kolonileştirdiği geniş kıta sahanlıklarını ortaya çıkardı ve daha sonra deniz seviyeleri yükseldikçe mevcut ada aralığında izole edildi.[8][19] Varanus sivalensis gibi modern Komodo ejderinin benzer büyüklükteki soyu tükenmiş Pliyosen türlerinin fosilleri, Pleistosen'in başlangıcı olan iklim değişikliği ve yokoluş olaylarına kadar memeli etoburları gibi rekabet içeren ortamlarda bile iyi ilerlediklerini gösteren Avrasya'da da bulunmuştur.
+                    &nbspSon buzul döneminde deniz seviyesinin dramatik bir şekilde düşmesi, Komodo ejderinin kolonileştirdiği geniş kıta sahanlıklarını ortaya çıkardı ve daha sonra deniz seviyeleri yükseldikçe mevcut ada aralığında izole edildi. Varanus sivalensis gibi modern Komodo ejderinin benzer büyüklükteki soyu tükenmiş Pliyosen türlerinin fosilleri, Pleistosen'in başlangıcı olan iklim değişikliği ve yokoluş olaylarına kadar memeli etoburları gibi rekabet içeren ortamlarda bile iyi ilerlediklerini gösteren Avrasya'da da bulunmuştur.
                 </p>
                 <p>
                     &nbspMitokondriyal DNA'nın genetik analizi, Komodo ejderinin, Varanus variusun en yakın akrabası (kardeş takson) olduğunu ve ortak atalarının Yeni Gine'nin Varanus salvadorii oluşturan bir soydan ayrıldığını gösterir.
                 </p>
                 <p>
-                    &nbsp2021'de yapılan bir araştırma, Miyosen sırasında Komodo ejderinin Avustralya Varanus gouldii atalarıyla melezleştiğini ve böylece Komodo ejderinin bir zamanlar Avustralya'da yaşadığına dair daha fazla kanıt sağladığını göstermişti.[25][26][27] Komodo ejderi ilk olarak Avrupalılar tarafından 1910'da Hollanda sömürge yönetiminden Teğmen van Steyn van Hensbroek'e bir "kara timsahı" söylentileri ulaştığında belgelendi.[8] Java, Bogor'daki Zooloji Müzesi müdürü Peter Ouwens, teğmenden bir fotoğraf, bir deri ve bir koleksiyoncudan iki başka örnek aldıktan sonra konuyla ilgili bir makale yayınladığında 1912'den sonra yaygın bir ün kazandı.
+                    &nbsp2021'de yapılan bir araştırma, Miyosen sırasında Komodo ejderinin Avustralya Varanus gouldii atalarıyla melezleştiğini ve böylece Komodo ejderinin bir zamanlar Avustralya'da yaşadığına dair daha fazla kanıt sağladığını göstermişti. Komodo ejderi ilk olarak Avrupalılar tarafından 1910'da Hollanda sömürge yönetiminden Teğmen van Steyn van Hensbroek'e bir "kara timsahı" söylentileri ulaştığında belgelendi. Java, Bogor'daki Zooloji Müzesi müdürü Peter Ouwens, teğmenden bir fotoğraf, bir deri ve bir koleksiyoncudan iki başka örnek aldıktan sonra konuyla ilgili bir makale yayınladığında 1912'den sonra yaygın bir ün kazandı.
                 </p>
                 <br>
                 <hr>
