--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>BOLT | ES</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
   <body>
@@ -32,11 +32,28 @@
         </div>
       </nav>
     <!-- nav - end -->
+    <!-- jumbotron - start -->
+    <div class="container">
+      <div class="row mt-5">
+        <col-sm-10>
+        <div class="jumbotron">
+          <h1 class="display-4"><b>Merhaba!</b></h1>
+          <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, saepe magnam veniam delectus rerum aliquid nisi enim fugiat quasi explicabo facere quo id ipsa culpa quas, eaque odio deserunt minima.</p>
+          <hr class="my-4">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+          <br>
+          <a class="btn btn-primary btn-lg btn-dark" href="about-us.html" role="button">Hakkımızda</a>
+        </div>
+        </col-sm-10>
+      </div>
+      <br><hr>
+    </div>
+    <!-- jumbotron end -->
     <!-- category cards - start -->
       <div class="container text-center" style="font-family: 'Times New Roman', Times, serif;">
         <div class="row">
           <col-sm-12>
-            <h1 class="mt-5">
+            <h1 class="mt-3">
                Kategoriler 
               </h1>  
               <hr>
